// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Redux-form Field PartialDateField snapshots tests renders PartialDateField component 1`] = `
<WithStyles(PartialDateForm)
  allowPartial={true}
  className=""
  classes={
    Object {
      "fakeTitle": Object {},
    }
  }
  dateFormat="YYYY-MM-DD"
  disableFuture={false}
  floatingTitle="Enter a date"
  floatingTitleRequired={false}
  input={
    Object {
      "onChange": [Function],
    }
  }
  locale={
    Object {
      "dayLabel": "Day",
      "maxNumberCharCode": 57,
      "minNumberCharCode": 48,
      "monthLabel": "Month",
      "validationMessage": Object {
        "date": "Invalid date",
        "day": "Invalid day",
        "future": "Date must be before now",
        "month": "Enter a month",
        "year": "Invalid year",
        "yearRequired": "Year required",
      },
      "yearLabel": "Year",
    }
  }
  months={
    Array [
      "January",
      "February",
      "March",
      "April",
      "May",
      "June",
      "July",
      "August",
      "September",
      "October",
      "November",
      "December",
    ]
  }
  name="partialDate"
  onChange={[Function]}
/>
`;

exports[`Redux-form Field PartialDateField snapshots tests renders PartialDateField component with requiredField class on all fields 1`] = `
<WithStyles(PartialDateForm)
  allowPartial={false}
  className="requiredField"
  classes={
    Object {
      "fakeTitle": Object {},
    }
  }
  dateFormat="YYYY-MM-DD"
  disableFuture={false}
  floatingTitle="Enter a date"
  floatingTitleRequired={false}
  input={
    Object {
      "onChange": [Function],
    }
  }
  locale={
    Object {
      "dayLabel": "Day",
      "maxNumberCharCode": 57,
      "minNumberCharCode": 48,
      "monthLabel": "Month",
      "validationMessage": Object {
        "date": "Invalid date",
        "day": "Invalid day",
        "future": "Date must be before now",
        "month": "Enter a month",
        "year": "Invalid year",
        "yearRequired": "Year required",
      },
      "yearLabel": "Year",
    }
  }
  months={
    Array [
      "January",
      "February",
      "March",
      "April",
      "May",
      "June",
      "July",
      "August",
      "September",
      "October",
      "November",
      "December",
    ]
  }
  name="partialDate"
  onChange={[Function]}
/>
`;

exports[`Redux-form Field PartialDateField snapshots tests renders PartialDateField component with requiredField class on year field 1`] = `
<WithStyles(PartialDateForm)
  allowPartial={true}
  className="requiredField"
  classes={
    Object {
      "fakeTitle": Object {},
    }
  }
  dateFormat="YYYY-MM-DD"
  disableFuture={false}
  floatingTitle="Enter a date"
  floatingTitleRequired={false}
  input={
    Object {
      "onChange": [Function],
    }
  }
  locale={
    Object {
      "dayLabel": "Day",
      "maxNumberCharCode": 57,
      "minNumberCharCode": 48,
      "monthLabel": "Month",
      "validationMessage": Object {
        "date": "Invalid date",
        "day": "Invalid day",
        "future": "Date must be before now",
        "month": "Enter a month",
        "year": "Invalid year",
        "yearRequired": "Year required",
      },
      "yearLabel": "Year",
    }
  }
  months={
    Array [
      "January",
      "February",
      "March",
      "April",
      "May",
      "June",
      "July",
      "August",
      "September",
      "October",
      "November",
      "December",
    ]
  }
  name="partialDate"
  onChange={[Function]}
/>
`;
